Fixed bug with not being able to press login on safari mobile browser

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,3 +5,7 @@ nav {
 [hidden] {
   display: none!important
 }
+
+#space {
+  padding-top: 50px;
+}
